[B]2.2.5[/B]
• Fix personalized widget 5
• Fix plots and thumbs on info dialog to avoid spoilers
• Fix widgets property

[B]2.2.4[/B]
• Add possibility to show CDArt on widgets and on library
• Add possibility to install addons zip files directly from home submenu
• Minor fixes

[B]2.2.3[/B]
• Add possibility to use alphabet for scrolling on library (experimental)
• Add more personalized widgets to bypass problem with disappearance and animations of widgets (use one personalized widget per home menu item)
• Changes on duration flag icon with hours and minutes
• Changes on PVR Guide with Kodi 18 last build
• Minor fixes

[B]2.2.2[/B]
• Add possibility to greyed out watched items in library and on widgets
• Add support for Videolyrics v3 with possibility to fix lyrics colors by song (thanks to manfeed)
• Add support for Kodi Log Uploader addon
• Fix LibreELEC settings buttons
• Minor fixes

[B]2.2.1[/B]
• Changes for Kodi 18
• Add 'All channels' and 'All radios' widgets
• Fix PVR channels OSD
• Fix esthetic appearance

[B]2.2.0[/B]
• Add possibility to force views in library
• Add possibility to customize power menu
• Add flags for moviesets widget
• Fix missing view for music
• Fix esthetic appearance
• Fix context menu position
• Minor fixes

[B]2.1.9[/B]
• Changes for Kodi 18
• Add preview for view mode
• Minor fixes

[B]2.1.8[/B]
• Add new 'Mosaic (vertical)' view

[B]2.1.7[/B]
• Changes for Kodi 18
• Fix setting to disable submenu
• Minor fixes

[B]2.1.6[/B]
• Add new 'Gallery' view
• Add new 'Mosaic' view
• Add clearlogos list for 'Shift' view
• Minor fixes

[B]2.1.5[/B]
• Add library info on settings widget
• Add ratings/user ratings in list views
• Changes on 'Next episode to watch' widget
• Minor fixes

[B]2.1.4[/B]
• Add possibility to configure submenus for Personnal Widget
• Add possibility to show banners for episodes/thumbs widgets
• Decrease number of personal widgets to 8 because not possible to show more
• Fix context menu for CU LRC Lyrics addon