@@ -55,7 +55,7 @@
 				<texturenofocus />
 			</control>
 			<control type="gamecontroller" id="31">
-				<left>400</left>
+				<left>410</left>
 				<top>210</top>
 				<width>547</width>
 				<height>343</height>
