@@ -126,10 +126,10 @@
 					</control>
 					<include content="ImageWidget" condition="!Library.HasContent(movies)">
 						<param name="text_label" value="$LOCALIZE[31104]" />
-						<param name="button_label" value="$LOCALIZE[31110]" />
+						<param name="button_label" value="$LOCALIZE[10048]" />
 						<param name="button_onclick" value="ActivateWindow(videos,files,return)"/>
 						<param name="button_id" value="5500"/>
-						<param name="button2_onclick" value="Skin.SetBool(HomeMenuNoMovieButton)"/>
+						<param name="visible_2" value="false"/>
 					</include>
 					<include content="WidgetScrollbar" condition="Skin.HasSetting(touchmode)">
 						<param name="scrollbar_id" value="5010"/>
@@ -229,10 +229,10 @@
 					</control>
 					<include content="ImageWidget" condition="!Library.HasContent(tvshows)">
 						<param name="text_label" value="$LOCALIZE[31104]" />
-						<param name="button_label" value="$LOCALIZE[31110]" />
+						<param name="button_label" value="$LOCALIZE[10048]" />
 						<param name="button_onclick" value="ActivateWindow(videos,files,return)"/>
 						<param name="button_id" value="6400"/>
-						<param name="button2_onclick" value="Skin.SetBool(HomeMenuNoTVShowButton)"/>
+						<param name="visible_2" value="false"/>
 					</include>
 					<include content="WidgetScrollbar" condition="Skin.HasSetting(touchmode)">
 						<param name="scrollbar_id" value="6010"/>
@@ -303,11 +303,11 @@
 						</include>
 					</control>
 					<include content="ImageWidget" condition="!Library.HasContent(music)">
-						<param name="text_label" value="$LOCALIZE[31104]" />
-						<param name="button_label" value="$LOCALIZE[31110]" />
-						<param name="button_onclick" value="ActivateWindow(music,files)"/>
+						<param name="text_label" value="$LOCALIZE[31110]" />
+						<param name="button_label" value="$LOCALIZE[10049]" />
+						<param name="button_onclick" value="ActivateWindow(Music,Files,return)"/>
 						<param name="button_id" value="7600"/>
-						<param name="button2_onclick" value="Skin.SetBool(HomeMenuNoMusicButton)"/>
+						<param name="visible_2" value="false"/>
 					</include>
 					<include content="WidgetScrollbar" condition="Skin.HasSetting(touchmode)">
 						<param name="scrollbar_id" value="7010"/>
@@ -393,7 +393,7 @@
 						<param name="button_onclick" value="ActivateWindow(addonbrowser)"/>
 						<param name="button_id" value="8600"/>
 						<param name="visible" value="!Integer.IsGreater(Container(8001).NumItems,0)"/>
-						<param name="button2_onclick" value="Skin.SetBool(HomeMenuNoProgramsButton)"/>
+						<param name="visible_2" value="false"/>
 					</include>
 					<include content="WidgetScrollbar" condition="Skin.HasSetting(touchmode)">
 						<param name="scrollbar_id" value="8010"/>
@@ -434,11 +434,11 @@
 					</control>
 					<include content="ImageWidget">
 						<param name="text_label" value="$LOCALIZE[31105]" />
-						<param name="button_label" value="$LOCALIZE[31110]" />
+						<param name="button_label" value="$LOCALIZE[10048]" />
 						<param name="button_onclick" value="ActivateWindow(videos,root)"/>
 						<param name="button_id" value="11300"/>
 						<param name="visible" value="!Integer.IsGreater(Container(11001).NumItems,0)"/>
-						<param name="button2_onclick" value="Skin.SetBool(HomeMenuNoVideosButton)"/>
+						<param name="visible_2" value="false"/>
 					</include>
 					<include content="WidgetScrollbar" condition="Skin.HasSetting(touchmode)">
 						<param name="scrollbar_id" value="11010"/>
@@ -525,7 +525,7 @@
 						<param name="button_label" value="$LOCALIZE[31144]" />
 						<param name="button_onclick" value="ActivateWindow(addonbrowser,addons://user/xbmc.pvrclient,return)"/>
 						<param name="button_id" value="12400"/>
-						<param name="button2_onclick" value="Skin.SetBool(HomeMenuNoTVButton)"/>
+						<param name="visible_2" value="false"/>
 					</include>
 					<include content="WidgetScrollbar" condition="Skin.HasSetting(touchmode)">
 						<param name="scrollbar_id" value="12010"/>
@@ -612,7 +612,7 @@
 						<param name="button_label" value="$LOCALIZE[31144]" />
 						<param name="button_onclick" value="ActivateWindow(addonbrowser,addons://user/xbmc.pvrclient,return)"/>
 						<param name="button_id" value="13400"/>
-						<param name="button2_onclick" value="Skin.SetBool(HomeMenuNoRadioButton)"/>
+						<param name="visible_2" value="false"/>
 					</include>
 					<include content="WidgetScrollbar" condition="Skin.HasSetting(touchmode)">
 						<param name="scrollbar_id" value="13010"/>
@@ -673,7 +673,7 @@
 						<param name="button_id" value="5500"/>
 						<param name="visible" value="!Integer.IsGreater(Container(14100).NumItems,0) + !Container(14100).IsUpdating"/>
 						<param name="visible_1" value="false"/>
-						<param name="button2_onclick" value="Skin.SetBool(HomeMenuNoFavButton)"/>
+						<param name="visible_2" value="false"/>
 					</include>
 					<include content="WidgetScrollbar" condition="Skin.HasSetting(touchmode)">
 						<param name="scrollbar_id" value="14010"/>
@@ -777,7 +777,7 @@
 						<param name="button_label" value="$LOCALIZE[31121]" />
 						<param name="button_onclick" value="ActivateWindow(servicesettings,weather)"/>
 						<param name="button_id" value="15300"/>
-						<param name="button2_onclick" value="Skin.SetBool(HomeMenuNoWeatherButton)"/>
+						<param name="visible_2" value="false"/>
 					</include>
 					<include content="WidgetScrollbar" condition="Skin.HasSetting(touchmode)">
 						<param name="scrollbar_id" value="15010"/>
@@ -851,10 +851,10 @@
 					</control>
 					<include content="ImageWidget" condition="!Library.HasContent(musicvideos)">
 						<param name="text_label" value="$LOCALIZE[31104]" />
-						<param name="button_label" value="$LOCALIZE[31110]" />
+						<param name="button_label" value="$LOCALIZE[10048]" />
 						<param name="button_onclick" value="ActivateWindow(videos,files,return)"/>
 						<param name="button_id" value="16800"/>
-						<param name="button2_onclick" value="Skin.SetBool(HomeMenuNoMusicVideoButton)"/>
+						<param name="visible_2" value="false"/>
 					</include>
 					<include content="WidgetScrollbar" condition="Skin.HasSetting(touchmode)">
 						<param name="scrollbar_id" value="16010"/>
@@ -868,13 +868,21 @@
 					</include>
 					<control type="grouplist" id="4001">
 						<include>WidgetGroupListCommon</include>
-						<include content="WidgetListCategories" condition="!Skin.HasSetting(HomeMenuNoPicturesButton)">
+						<include content="WidgetListCategories">
 							<param name="content_path" value="sources://pictures/"/>
-							<param name="widget_header" value="$LOCALIZE[20094]"/>
+							<param name="widget_header" value="$LOCALIZE[40175]"/>
 							<param name="widget_target" value="pictures"/>
 							<param name="list_id" value="4100"/>
 						</include>
 					</control>
+					<include content="ImageWidget">
+						<param name="text_label" value="$LOCALIZE[40174]" />
+						<param name="button_label" value="$LOCALIZE[10050]" />
+						<param name="button_onclick" value="ActivateWindow(pictures,root)"/>
+						<param name="button_id" value="4200"/>
+						<param name="visible_2" value="false"/>
+						<param name="visible" value="!Integer.IsGreater(Container(4001).NumItems,0)"/>
+					</include>
 				</control>
 				<control type="group" id="17000">
 					<animation effect="slide" end="502,0" time="200" tween="quadratic" easing="out" condition="[Control.HasFocus(9000) | ControlGroup(700).HasFocus] + Skin.HasSetting(HideMainMenuWithWidgets)">Conditional</animation>
@@ -882,24 +890,24 @@
 					<include content="Visible_Right_Delayed_Home">
 						<param name="id" value="GamesWidget"/>
 					</include>
-					<include content="ImageWidget">
-						<param name="text_label" value="$LOCALIZE[31162]" />
-						<param name="button_label" value="$LOCALIZE[31110]" />
-						<param name="button_onclick" value="ActivateWindow(games)"/>
-						<param name="button_id" value="17100"/>
-						<param name="button2_onclick" value="Skin.SetBool(HomeMenuNoGamesButton)"/>
-					</include>
 					<control type="grouplist" id="17001">
 						<include>WidgetGroupListCommon</include>
-						<include content="ImageWidget">
-							<param name="text_label" value="$LOCALIZE[31162]" />
-							<param name="button_label" value="$LOCALIZE[31110]" />
-							<param name="button_onclick" value="ActivateWindow(games)"/>
-							<param name="button_id" value="17100"/>
-							<param name="visible" value="true"/>
-							<param name="button2_onclick" value="Skin.SetBool(HomeMenuNoGamesButton)"/>
+						<include content="WidgetListCategories">
+							<param name="content_path" value="sources://games/"/>
+							<param name="widget_header" value="$LOCALIZE[40172]"/>
+							<param name="widget_target" value="games"/>
+							<param name="list_id" value="17100"/>
 						</include>
 					</control>
+					<include content="ImageWidget">
+						<param name="text_label" value="$LOCALIZE[40173]" />
+						<param name="button_label" value="$LOCALIZE[31116]" />
+						<param name="button2_label" value="$LOCALIZE[31118]" />
+						<param name="button_onclick" value="ActivateWindow(games)"/>
+						<param name="button_id" value="17200"/>
+						<param name="button2_onclick" value="ActivateWindow(addonbrowser)"/>
+						<param name="visible" value="!Integer.IsGreater(Container(17001).NumItems,0)"/>
+					</include>
 				</control>
 				<control type="group" id="21000">
 					<animation effect="slide" end="502,0" time="200" tween="quadratic" easing="out" condition="[Control.HasFocus(9000) | ControlGroup(700).HasFocus] + Skin.HasSetting(HideMainMenuWithWidgets)">Conditional</animation>
